changed title to (new) logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body onload='create()'>
     <div id='electron-titlebar'>
-      <p id='titleBar-name'>Discord <span id='titleBar-liveBot'>LiveBot</span></p>
+      <p id='titleBar-name'><img src="images/livebotlogo.png" height=15></p>
       <div class='drag'></div>
 
     </div>
