some lil things

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id='settoken'>
           <div id='tokenspace'>
             <input type="text" name="token" value="" placeholder='Token' id='tokenbox'/>
-            <button type="button" name="button" onclick='savetoken()' id='savebtn'>Connect & Save</button>
+            <button type="button" name="button" onclick='savetoken()' id='savebtn'>Connect</button>
           </div>
         </div>
 
