--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <div id='main'>
       <div id='guild-list'>
+        <center><p id='versionstr' style="font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.6em;"><span style="color: #C13281;">LiveBot</span><br></p></center>
+        <hr style="border-color: #a0a0a0;">
         <div id='guildIndicator'></div>
       </div>
 
