--- a/index.html
+++ b/index.html
@@ -1,22 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="main.css">
 <style>
-body{font-family: Tahoma, Geneva, sans-serif; background-color: black; color: white;}
-.logo{color: rgb(79,93,255); /* Old browsers */
-color: -moz-linear-gradient(-45deg, rgba(79,93,255,1) 0%, rgba(211,238,255,1) 100%); /* FF3.6-15 */
-color: -webkit-linear-gradient(-45deg, rgba(79,93,255,1) 0%,rgba(211,238,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-color: linear-gradient(135deg, rgba(79,93,255,1) 0%,rgba(211,238,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-font-size: 4.5em;
-font-weight: bold;}
-.center {
-    position: absolute;
-    height: 200px;
-    width: 400px;
-    margin: -100px 0 0 -200px;
-    top: 40%;
-    left: 50%;
-}
 </style>
 </head>
 <body>
@@ -24,6 +10,8 @@ font-weight: bold;}
 <center>
 <p class="logo">LiveBot</p>
 <p>This page isn't finished, so I suggest you wait.</p>
+<p>LiveBot is a App developed by <a href="https://github.com/PlayBy/Discord-LiveBot">PlayBy</a> and completely remodeled by <a href="https://github.com/EndlessHosting">Endless Hosting</a></p>
+<p><a href="team.html">The Tean</a></p>
 </center>
 </div>
 </body>
