I'm gonna work on this later... ugh

--- a/team.html
+++ b/team.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>LiveBot Team</title>
 <link rel="stylesheet" href="main.css">
 <style>
 </style>
@@ -14,6 +15,9 @@
     <a href="https://keybase.io/rossmdevs">Ross#2648</a><br>
     <a href="https://keybase.io/rossmdevs">Cuboid#3163</a><br>
     <a href="https://keybase.io/rossmdevs">apollo#9292</a><br>
+    <br>
+    <br>
+    <a href="index.html">Go Back</a><br>
 </p>
 </center>
 </div>
