made the mascot a kiwi and gave the app an icon other than the default Electron icon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body onload='create()'>
     <div id='electron-titlebar'>
-      <p id='titleBar-name'><img src="images/livebotlogo.png" height=15></p>
+      <p id='titleBar-name'><img src="images/livebotlogoadv.png" height=15></p>
       <div class='drag'></div>
 
     </div>
