do some adjustments and add a disclaimer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h5 id='guildName'>discord-livebot</h5>
         <img src='images/default.png' id='guildImg'/>
         <p id='members-text' class='members'>Members: </p>
-        <p id='members-count' class='members'>discord-livebot</p>
+        <p id='members-count' class='members'>42</p>
       </div>
 
       <div id='channel-list'>
