added send button

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
         <div id='sendmsg'>
           <input type="text" name="message" value="" placeholder='Message' id='msgbox'  ontype='typing()'/>
+          <button type="button" name="button" onclick='sendmsg()' id='sendbtn'>Send</button>
         </div>
       </div>
 
