add "set username" button and seperator for both buttons to avoid confusion

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 
       <div id='options'>
         <input type='text' name='name' value='' placeholder='Username' id='usernameBox' class='optionBox'/>
+        <input type='button' name='invite' value='Set Username' id='usernameBtn' class='optionBox' onclick="changeUname()"/>
+        <br>
+        <hr style="border-color: #676767;">
+        <br><!--
+        <input type='number' name='name' value='0' placeholder='Max Uses' id='maxuses-inviteBox' class='optionBox'/>
+        <input type='number' name='name' value='0' placeholder='Max Age' id='maxage-inviteBox' class='optionBox'/>
+        <p id="temporaryText" style="margin-left: calc(50% - 40px); margin-bottom: 5px; margin-top: 5px; font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.9em">Temporary?: </p>
+        <input type='checkbox' name='name' value=False placeholder='Username' id='temporary-inviteBox' style=" " class='optionBox'/>-->
         <input type='button' name='invite' value='Generate Invite' id='inviteBtn' class='optionBox' onclick="options('invite','')"/>
       </div>
     </div>
