make loading icon and unselect channel upon entering other guild

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <div class='drag'></div>
 
     </div>
-
     <div id='main'>
       <div id='guild-list'>
         <center><p id='versionstr' style="font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.6em;"><span style="color: #C13281;">LiveBot</span><br></p></center>
@@ -70,6 +69,7 @@
         <p id="temporaryText" style="margin-left: calc(50% - 40px); margin-bottom: 5px; margin-top: 5px; font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.9em">Temporary?: </p>
         <input type='checkbox' name='name' value=False placeholder='Username' id='temporary-inviteBox' style=" " class='optionBox'/>-->
         <input type='button' name='invite' value='Generate Invite' id='inviteBtn' class='optionBox' onclick="options('invite','')"/>
+      <img id="spinningKiwi" style="visibility: hidden;" class="center" src="images/kiwimascot.png">
       </div>
     </div>
   </body>
