added option to set game and status

--- a/index.html
+++ b/index.html
@@ -69,6 +69,21 @@
         <p id="temporaryText" style="margin-left: calc(50% - 40px); margin-bottom: 5px; margin-top: 5px; font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.9em">Temporary?: </p>
         <input type='checkbox' name='name' value=False placeholder='Username' id='temporary-inviteBox' style=" " class='optionBox'/>-->
         <input type='button' name='invite' value='Generate Invite' id='inviteBtn' class='optionBox' onclick="options('invite','')"/>
+        <br>
+        <hr style="border-color: #676767;">
+        <br>
+        <input type='text' name='name' value='' placeholder='Game' id='gameBox' class='optionBox'/>
+        <input type='button' name='invite' value='Set Game' id='gameBtn' class='optionBox' onclick="setGame()"/>
+        <br>
+        <hr style="border-color: #676767;">
+        <br>
+        <select id='statusBox' class='optionBox'>
+          <option value="online">Online</option>
+          <option value="invisible">Offline</option>
+          <option value="dnd">Do Not Disturb</option>
+          <option value="idle">Idle</option>
+        </select>
+        <input type='button' name='invite' value='Set Status' id='statusBtn' class='optionBox' onclick="setStatus()"/>
       <img id="spinningKiwi" style="visibility: hidden;" class="center" src="images/kiwimascot.png">
       </div>
     </div>
