Literally completely new Index File
I'll remake the Team site at one point uwu

--- a/index.html
+++ b/index.html
@@ -1,18 +1,69 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="EndlessHosting">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+
+    <title>Discord LiveBot</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./styles/bootstrap-material-design.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="./styles/starter-template.css" rel="stylesheet">
+    <!-- Some other things uwu-->
+    <link href="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/kiwimascoticnborders.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
 <style>
+    
 </style>
-</head>
-<body>
-<div class="center">
-<center>
-<p class="logo">LiveBot</p>
-<p>This page isn't finished, so I suggest you wait.</p>
-<p>LiveBot is a App developed by <a href="https://github.com/PlayBy/Discord-LiveBot">PlayBy</a> and completely remodeled by <a href="https://github.com/EndlessHosting">Endless Hosting</a></p>
-<p><a href="team.html">The Tean</a></p>
-</center>
-</div>
-</body>
-</html>
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="download.html">Download</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <main role="main" class="container">
+
+      <div class="starter-template">
+        <h1 class="logo"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" alt="Logo"></h1>
+        <p class="lead">This page isn't finished, so I suggest you wait.<br> LiveBot is a App developed by <a href="https://github.com/PlayBy/Discord-LiveBot">PlayBy</a> and completely remodeled by <a href="https://github.com/EndlessHosting">Endless Hosting</a></p>
+      </div>
+
+    </main><!-- /.container -->
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./styles/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="./styles/popper.min.js"></script>
+    <script src="./styles/bootstrap-material-design.min.js"></script>
+  
+
+</body></html>
