Many much meta tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="EndlessHosting">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+    
+        <meta name="description" content="Shared Hosting">
+        <meta name="author" content="Awoobis">
+        <meta name="theme-color" content="#C13281">
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@HostingEndless">
+        <meta name="twitter:creator" content="@tinyawooo">
+        <meta property="og:title" content="Discord-LiveBot">
+        <meta property="og:site_name" content="Endless Hosting">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png">
+        <meta property="og:description" content="Discord-LiveBot allows you to take control of your Discord bot using a client-like interface..">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Discord LiveBot</title>
 
