confused kiwi when you aren't in any channel

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     </div>
     <div id='main'>
       <div id='guild-list'>
-        <center><p id='versionstr' style="font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.6em;"><span style="color: #C13281;">LiveBot</span><br></p></center>
-        <hr style="border-color: #a0a0a0;">
+        <p><center style="margin-top: -18px;"><span style="margin-top: -10px; color: #C13281; font-family: Tahoma, Geneva, sans-serif; font-size: 0.6em;">LiveBot </span><br><span id="versionstr" style="margin-top: 0px; color: white; font-family: Tahoma, Geneva, sans-serif; font-size: 0.6em;"></span><hr style="border-color: #a0a0a0; font-family: Tahoma, Geneva, sans-serif; color: white; font-size: 0.6em;"></center></p>
         <div id='guildIndicator'></div>
       </div>
 
@@ -85,6 +84,7 @@
         </select>
         <input type='button' name='invite' value='Set Status' id='statusBtn' class='optionBox' onclick="setStatus()"/>
       <img id="spinningKiwi" style="visibility: hidden;" class="center" src="images/kiwimascot.png">
+      <img id="nochannel" src="images/kiwinotfound.png" class="center">
       </div>
     </div>
   </body>
