many many changes ✨
Footers, Download Template, moved CSS into styles/ ALSO A TEAM TAB

--- a/download.html
+++ b/download.html
@@ -5,12 +5,12 @@
     
     
         <meta name="description" content="Shared Hosting">
-        <meta name="author" content="Awooobis">
+        <meta name="author" content="Awoobis">
         <meta name="theme-color" content="#C13281">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@HostingEndless">
-        <meta name="twitter:creator" content="@Awooobis">
+        <meta name="twitter:creator" content="@tinyawooo">
         <meta property="og:title" content="Discord-LiveBot">
         <meta property="og:site_name" content="Endless Hosting">
         <meta property="og:type" content="website">
@@ -44,15 +44,15 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="download.html">Download <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="download.html">Download</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="team.html">Team</a>
-          </li>
+              <a class="nav-link" href="team.html">Team</a>
+            </li>
         </ul>
       </div>
     </nav>
