Embed Fix in Team

--- a/team.html
+++ b/team.html
@@ -11,11 +11,11 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@HostingEndless">
         <meta name="twitter:creator" content="@tinyawooo">
-        <meta property="og:title" content="Discord-LiveBot">
+        <meta property="og:title" content="The Team">
         <meta property="og:site_name" content="Endless Hosting">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png">
-        <meta property="og:description" content="Discord-LiveBot allows you to take control of your Discord bot using a client-like interface..">
+        <meta property="og:description" content="The Team of LiveBot.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Discord LiveBot</title>
