I'm an Idiot and had too many dots

--- a/download.html
+++ b/download.html
@@ -15,7 +15,7 @@
         <meta property="og:site_name" content="Endless Hosting">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png">
-        <meta property="og:description" content="Discord-LiveBot allows you to take control of your Discord bot using a client-like interface..">
+        <meta property="og:description" content="Discord-LiveBot allows you to take control of your Discord bot using a client-like interface.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Discord LiveBot</title>
