--- a/download/index.html
+++ b/download/index.html
@@ -10,15 +10,15 @@
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@HostingEndless">
-        <meta name="twitter:creator" content="@tinyawooo">
-        <meta property="og:title" content="Discord-LiveBot">
+        <meta name="twitter:creator" content="@Awooobis">
+        <meta property="og:title" content="Download">
         <meta property="og:site_name" content="Endless Hosting">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png">
         <meta property="og:description" content="Discord-LiveBot allows you to take control of your Discord bot using a client-like interface.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Discord LiveBot</title>
+    <title>Downloads</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../styles/bootstrap-material-design.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
+      <a class="navbar-brand" href="../index.html" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -59,7 +59,8 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <p class="lead">This page isn't finished, so I suggest you wait.<br></p>
+        <h1>Downloads</h1>
+        <p class="lead">This Page will show you the downloads, but it's not done yet so I suggest you wait.<br></p>
       </div>
 <footer>
   <p>LiveBot is a App developed by <a href="https://github.com/PlayBy/Discord-LiveBot">PlayBy</a> and completely remodeled by <a href="https://github.com/EndlessHosting">Endless Hosting</a></p>
