--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
+      <a class="navbar-brand" href="../" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -60,10 +60,11 @@
     <main role="main" class="container">
 
       <div class="starter-template">
+        <h1>Home</h1>
         <p class="lead">This page isn't finished, so I suggest you wait.<br></p>
       </div>
 <footer>
-  <p>LiveBot is a App developed by <a href="https://github.com/PlayBy/Discord-LiveBot">PlayBy</a> and completely remodeled by <a href="https://github.com/EndlessHosting">Endless Hosting</a></p>
+  <p>LiveBot was started by <a href="https://github.com/PlayBy/Discord-LiveBot">PlayBy</a> and completely remodeled by <a href="https://github.com/EndlessHosting">Endless Hosting</a></p>
 </footer>
     </main><!-- /.container -->
 
