--- a/team/index.html
+++ b/team/index.html
@@ -5,12 +5,12 @@
     
     
         <meta name="description" content="Shared Hosting">
-        <meta name="author" content="Awoobis">
+        <meta name="author" content="Awooobis">
         <meta name="theme-color" content="#C13281">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@HostingEndless">
-        <meta name="twitter:creator" content="@tinyawooo">
+        <meta name="twitter:creator" content="@Awooobis">
         <meta property="og:title" content="The Team">
         <meta property="og:site_name" content="Endless Hosting">
         <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
         <meta property="og:description" content="The Team of LiveBot.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Discord LiveBot</title>
+    <title>The Team</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../styles/bootstrap-material-design.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
+      <a class="navbar-brand" href="../index.html" style="color: #C13281; font-family: Roboto"><img src="https://raw.githubusercontent.com/EndlessHosting/Discord-LiveBot/master/images/livebotlogo.png" style="height: auto; width: auto; max-width: 100px; max-height: 100px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
