--- a/team/index.html
+++ b/team/index.html
@@ -62,9 +62,9 @@
       <div class="starter-template">
         <h1><i>These People made this possible:</i></h1>
         <p class="lead"><a href="https://neonpuppy.ml"><script src="https://oxybot.ml/devname.js"></script></a>
-        Web Dev, Akira's Father, Resident MacOS Tester.</p>
+         Akira's Father, Resident MacOS Tester | Front End </p>
         <p class="lead"><a href="https://keybase.io/cuboid">Cuboid#3163</a>
-        Function Maker and Logo Designer</p>
+        Function Maker and Logo Designer | Back End</p>
         <p class="lead"><a href="https://keybase.io/Electromaster">DJ Electro#1677</a>
         CI and Installer Creator</p>
           <p class="lead"><a href="https://keybase.io/LewisTehMinerz">LewisTehMinerz#1337</a>
