--- a/team/index.html
+++ b/team/index.html
@@ -70,7 +70,7 @@
           <p class="lead"><a href="https://keybase.io/LewisTehMinerz">LewisTehMinerz#1337</a>
             CI and Installer Helper
           </p>
-            <p class="lead"><a href="https://keybase.io/rossmdevs">Ross#2648</a>
+            <p class="lead"><a href="https://keybase.io/rossmdevs">Ross#2648</a> - I did project management, I added my credits myself ;) 
             </p>
             <p class="lead"><a href="https://keybase.io/inteliboi">Intel#3981</a>
             </p>
