--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
           <option value="idle">Idle</option>
         </select>
         <input type='button' name='invite' value='Set Status' id='statusBtn' class='optionBox' onclick="setStatus()"/>
+        <br>
+        <hr style="border-color: #676767;">
+        <br>
+        <p id="optionText">Show hidden channels?</p>
+        <input type='checkbox' name='invite' id='showhiddenChkBx' checked=true class='optionBox'/>
       <img id="spinningKiwi" style="visibility: hidden;" class="center" src="images/kiwimascot.png">
       <img id="nochannel" src="images/kiwinotfound.png" class="center">
       </div>
