add alert for voice channels and disable hidden channels box

--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
         <br>
         <hr style="border-color: #676767;">
         <br>
-        <p id="optionText">Show hidden channels?</p>
+        <!--<p id="optionText">Show hidden channels?</p>
         <input type='checkbox' name='invite' id='showhiddenChkBx' checked=true class='optionBox'/>
+        -->
       <img id="spinningKiwi" style="visibility: hidden;" class="center" src="images/kiwimascot.png">
       <img id="nochannel" src="images/kiwinotfound.png" class="center">
       </div>
