streaming status (it links to discord's twitch lol)

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <option value="invisible">Offline</option>
           <option value="dnd">Do Not Disturb</option>
           <option value="idle">Idle</option>
+		  <option value="streaming">Streaming (set game first)</option>
         </select>
         <input type='button' name='invite' value='Set Status' id='statusBtn' class='optionBox' onclick="setStatus()"/>
         <br>
